--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,18 +1,19 @@
-div.headerContainer {
+.headerContainer {
 	width: 90%;
 	margin: 0 auto;
-	margin-top: 10rem;
-	z-index: 1000;
+	// margin-top: 10rem;
+	position: relative;
+	top: 14rem;
 }
 
-div.logoBox {
+.logoBox {
 	width: 15%;
 	position: relative;
 	bottom: -7.5rem;
 	left: 4%;
 }
 
-div.navRuler {
+.navRuler {
 	width: 90%;
 	height: 5rem;
 	background-color: white;
