--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,9 +51,6 @@ body {
 	width: 76%;
 	background-color: white;
 	margin: 0 auto;
-	position: relative;
-	top: -14rem;
-	z-index: -100;
 
 }
 
@@ -66,7 +63,7 @@ body {
 	width: 100%;
 }
 
-div.section {
+.section {
 	margin-bottom: 10rem;
 }
 
